[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/UI/DialogueFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/DialoguePlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Dialogue.gd" type="Script" id=3]

[node name="Dialogue" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -958.786
margin_top = -1077.13
margin_right = 961.214
margin_bottom = 2.86768
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerPortrait" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -160.0
margin_bottom = 240.0

[node name="DialogueBox" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -300.0
margin_right = 960.0
rect_min_size = Vector2( 0, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerName" type="Label" parent="DialogueBox"]
margin_left = 80.0
margin_top = 5.0
margin_right = 200.0
margin_bottom = 15.0
rect_scale = Vector2( 3.16428, 3.77564 )
text = "Placeholder Name "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Label" parent="DialogueBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -900.0
margin_top = -225.0
margin_right = 900.0
margin_bottom = -50.0
rect_min_size = Vector2( 1030, 200 )
custom_fonts/font = ExtResource( 1 )
text = "Some test of Some test of the font blah blah blah blah Some test of the font blah blah blah blSome test of the font blah blah blah blah Some test of the font blah blah blah blah Some test of the font blah blah blah blah ah "
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DialogueBox"]
margin_left = 1614.93
margin_top = 200.925
margin_right = 1857.93
margin_bottom = 270.925
text = "NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialoguePlayer" parent="." instance=ExtResource( 2 )]
[connection signal="button_up" from="DialogueBox/Button" to="." method="_on_Button_button_up"]
